@@ -5,6 +5,7 @@ import static com.gtnewhorizon.structurelib.structure.StructureUtility.ofBlockAn
 import static com.gtnewhorizon.structurelib.structure.StructureUtility.ofChain;
 import static com.gtnewhorizon.structurelib.structure.StructureUtility.onElementPass;
 import static com.gtnewhorizon.structurelib.structure.StructureUtility.transpose;
+import static gregtech.GTLoggers.GT_FML_LOGGER;
 import static gregtech.api.enums.HatchElement.Energy;
 import static gregtech.api.enums.HatchElement.InputBus;
 import static gregtech.api.enums.HatchElement.Maintenance;
@@ -19,7 +20,6 @@ import java.util.function.BiFunction;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.inventory.IInventory;
 import net.minecraft.inventory.InventoryCrafting;
 import net.minecraft.item.ItemStack;
@@ -75,14 +75,13 @@ import gregtech.api.enums.ItemList;
 import gregtech.api.enums.Textures;
 import gregtech.api.interfaces.ITexture;
 import gregtech.api.interfaces.metatileentity.IMetaTileEntity;
+import gregtech.api.interfaces.tileentity.ICasingTextureProvider;
 import gregtech.api.interfaces.tileentity.IGregTechTileEntity;
 import gregtech.api.metatileentity.BaseMetaTileEntity;
 import gregtech.api.metatileentity.implementations.MTEExtendedPowerMultiBlockBase;
 import gregtech.api.metatileentity.implementations.MTEHatchInputBus;
 import gregtech.api.net.GTPacketLMACraftingFX;
-import gregtech.api.render.TextureFactory;
 import gregtech.api.structure.error.StructureError;
-import gregtech.api.util.GTLog;
 import gregtech.api.util.GTUtility;
 import gregtech.api.util.MultiblockTooltipBuilder;
 import gregtech.common.gui.modularui.multiblock.MTELargeMolecularAssemblerGui;
@@ -92,8 +91,8 @@ import gregtech.common.tileentities.machines.MTEHatchCraftingInputME;
 import gregtech.common.tileentities.machines.MTEHatchPatternProvider;
 import gregtech.crossmod.ae2.InputBusInventoryProxy;
 
-public class MTELargeMolecularAssembler extends MTEExtendedPowerMultiBlockBase<MTELargeMolecularAssembler>
-    implements ICraftingProvider, IActionHost, IGridProxyable, IInterfaceViewable, ISurvivalConstructable {
+public class MTELargeMolecularAssembler extends MTEExtendedPowerMultiBlockBase<MTELargeMolecularAssembler> implements
+    ICraftingProvider, IActionHost, IGridProxyable, IInterfaceViewable, ISurvivalConstructable, ICasingTextureProvider {
 
     private static final String DATA_ORB_JOBS_KEY = "MX-CraftingJobs";
     private static final String DATA_ORB_JOBS_JOB_KEY = "Job";
@@ -181,15 +180,22 @@ public class MTELargeMolecularAssembler extends MTEExtendedPowerMultiBlockBase<M
     }
 
     @Override
-    public ITexture[] getTexture(IGregTechTileEntity baseMetaTileEntity, ForgeDirection side, ForgeDirection facing,
-        int colorIndex, boolean active, boolean redstoneLevel) {
-        if (side == facing) {
-            return new ITexture[] { Textures.BlockIcons.getCasingTextureForId(CASING_INDEX), TextureFactory.builder()
-                .addIcon(Textures.BlockIcons.OVERLAY_ME_HATCH)
-                .extFacing()
-                .build() };
-        }
-        return new ITexture[] { Textures.BlockIcons.getCasingTextureForId(CASING_INDEX) };
+    public ITexture[] getTexture(IGregTechTileEntity aBaseMetaTileEntity, ForgeDirection side, ForgeDirection aFacing,
+        int colorIndex, boolean aActive, boolean redstoneLevel) {
+        return Textures.BlockIcons.createTextureWithCasing(
+            this,
+            side,
+            aFacing,
+            aActive,
+            Textures.BlockIcons.OVERLAY_ME_HATCH,
+            Textures.BlockIcons.OVERLAY_ME_HATCH_GLOW,
+            Textures.BlockIcons.OVERLAY_ME_HATCH_ACTIVE,
+            Textures.BlockIcons.OVERLAY_ME_HATCH_ACTIVE_GLOW);
+    }
+
+    @Override
+    public ITexture getCasingTexture() {
+        return Textures.BlockIcons.getCasingTextureForId(CASING_INDEX);
     }
 
     @Override
@@ -324,20 +330,14 @@ public class MTELargeMolecularAssembler extends MTEExtendedPowerMultiBlockBase<M
             .addInfo("-Double the number of Jobs finished at once")
             .beginStructureBlock(5, 5, 5, true)
             .addController("Front bottom center")
-            .addCasingInfoMin("Robust Tungstensteel Machine Casing", MIN_CASING_COUNT, false)
-            .addCasingInfoExactly(
-                AEApi.instance()
-                    .definitions()
-                    .blocks()
-                    .quartzVibrantGlass()
-                    .maybeBlock()
-                    .get()
-                    .getLocalizedName(),
-                54,
-                false)
-            .addInputBus("Any Casing", 1)
-            .addEnergyHatch("Any Casing", 1)
-            .addMaintenanceHatch("Any Casing", 1)
+            .addCasing("54", "Vibrant Quartz Glass", false)
+            .addCasing(MIN_CASING_COUNT + "-40", "Robust Tungstensteel Machine Casing", false)
+            .addEnergyHatch("1+", "Any casing", 1)
+            .addMaintenanceHatch("1", "Any casing", 1)
+            .addMiscHatch("1+", "Input Bus or Crafting Pattern Provider", "Any casing", 1)
+            .addAir("Interior of the structure")
+            .addStructureInfo("")
+            .addStructureFooter("Place a data orb inside the controller and connect it to an AE2 network")
             .toolTipFinisher();
     }
 
@@ -351,10 +351,10 @@ public class MTELargeMolecularAssembler extends MTEExtendedPowerMultiBlockBase<M
             STRUCTURE_DEPTH_OFFSET,
             errors)) return;
 
-        checkOneMaintenanceHatch(errors);
-        checkHasEnergyHatch(errors);
-        checkHasInputBus(errors);
         checkCasingMin(errors, casing, MIN_CASING_COUNT);
+        checkHasEnergyHatch(errors);
+        checkOneMaintenanceHatch(errors);
+        checkHasInputBus(errors);
     }
 
     @Override
@@ -554,7 +554,7 @@ public class MTELargeMolecularAssembler extends MTEExtendedPowerMultiBlockBase<M
         List<MTEHatchInputBus> inputs = GTUtility.filterValidMTEs(mInputBusses)
             .stream()
             .filter(bus -> !(bus instanceof MTEHatchCraftingInputME))
-            .collect(Collectors.toList());
+            .toList();
 
         boolean changed = false;
         Map<ItemStack, ICraftingPatternDetails> patterns = new ItemStackMap<>(true);
@@ -612,10 +612,10 @@ public class MTELargeMolecularAssembler extends MTEExtendedPowerMultiBlockBase<M
                 IGridNode node = proxy.getNode();
                 if (node == null) return;
                 if (node.getPlayerID() == -1) {
-                    GTLog.out.printf(
-                        "Found a LMA at %s without valid AE playerID.\n",
+                    GT_FML_LOGGER.debug(
+                        "Found a LMA at {} without valid AE playerID.\n",
                         ((BaseMetaTileEntity) baseMetaTileEntity).getLocation());
-                    GTLog.out.println("Try to recover playerID with UUID: " + baseMetaTileEntity.getOwnerUuid());
+                    GT_FML_LOGGER.debug("Try to recover playerID with UUID: {}", baseMetaTileEntity.getOwnerUuid());
                     // recover ID from old version
                     int playerAEID = WorldData.instance()
                         .playerData()
@@ -624,7 +624,7 @@ public class MTELargeMolecularAssembler extends MTEExtendedPowerMultiBlockBase<M
                     node.setPlayerID(playerAEID);
                     ((GridNode) node).setLastSecurityKey(-1);
                     node.updateState(); // refresh the security connection
-                    GTLog.out.println("Now it has playerID: " + playerAEID);
+                    GT_FML_LOGGER.debug("Now it has playerID: {}", playerAEID);
                 }
             }
 
@@ -701,11 +701,6 @@ public class MTELargeMolecularAssembler extends MTEExtendedPowerMultiBlockBase<M
         if (gridProxy == null) {
             gridProxy = new AENetworkProxy(this, "proxy", getStackForm(1), true);
             gridProxy.setFlags(GridFlags.REQUIRE_CHANNEL);
-            if (getBaseMetaTileEntity().getWorld() != null) {
-                EntityPlayer player = getBaseMetaTileEntity().getWorld()
-                    .getPlayerEntityByName(getBaseMetaTileEntity().getOwnerName());
-                gridProxy.setOwner(player);
-            }
         }
         return gridProxy;
     }
